Total : checkUserHasException에 관련된 문서 전부 수정
checkUserHasException 메소드의 1과 2 예외처리 간과로 Application, MyTest, 기능목록(README.md) 전부 수정